# models/ticketModel.js
@@ -1,5 +1,5 @@
-const { Ticket } = require("../schemas/ticketSchema");
-const { getUserWithId } = require("../services/userService");
+const { Ticket } = require('../schemas/ticketSchema');
+const { getUserWithId } = require('../services/userService');
 
 const createRes = (id, flag) => {
   const updateStatus = {
@@ -11,46 +11,41 @@ const createRes = (id, flag) => {
 
 const validatePersonId = async (personId) => {
   const user = await getUserWithId(personId);
-  if (user == "Invalid Id") return false;
-  if (user == "No User Available with the given id") return false;
+  if (user === 'Invalid Id') return false;
+  if (user === 'No User Available with the given id') return false;
   return true;
-};
-
-const updateTickets = async (Tickets) => {
-  const result = [];
-  for (const ticketIndex in Tickets) {
-    const ticket = Tickets[ticketIndex];
-    if (await validatePersonId(ticket.personId)) {
-      const res = await Ticket.updateOne(
-        { ticketId: ticket.ticketId, status: "open" },
-        { status: "closed", personId: ticket.personId }
-      );
-      if (res.nModified == 1) result.push(createRes(ticket.ticketId, true));
-      else result.push(createRes(ticket.ticketId, false));
-    } else result.push(createRes(ticket.ticketId, false));
-  }
-  return result;
-};
-
-const getAll = () => {
-  const tickets = Ticket.find({}, "-_id -__v");
-  return tickets;
 };
 
 const updateStatus = async (id, userId) => {
   if (await validatePersonId(userId)) {
     const result = await Ticket.updateOne(
-      { ticketId: id, status: "open" },
-      { status: "closed", personId: userId }
+      { ticketId: id, status: 'open' },
+      { status: 'closed', personId: userId }
     );
-    if (result.nModified == 1) return "Success";
-    return "Already Booked";
+    if (result.nModified === 1) return 'Success';
+    return 'Already Booked';
   }
-  else return "Check User Id";
+  return 'Check User Id';
+};
+
+const updateTickets = async (Tickets) => {
+  const result = [];
+  await Promise.all(
+    Tickets.map(async (ticket) => {
+      const val = await updateStatus(ticket.ticketId, ticket.personId);
+      result.push(createRes(ticket.ticketId, val));
+    })
+  );
+  return result;
+};
+
+const getAll = () => {
+  const tickets = Ticket.find({}, '-_id -__v');
+  return tickets;
 };
 
 const getTicket = (id) => {
-  const ticket = Ticket.findOne({ ticketId: id }, "-_id -__v");
+  const ticket = Ticket.findOne({ ticketId: id }, '-_id -__v');
   return ticket;
 };
 
@@ -62,7 +57,7 @@ const getTicketsWithStatus = (stat) => {
 const reset = async () => {
   const result = await Ticket.updateMany(
     {},
-    { status: "open", personId: null }
+    { status: 'open', personId: null }
   );
   return result;
 };
